[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seapipe"
version = "0.1"
dependencies = [
  "pandas",
  "wonambi>7.0",
  "fooof",
  "scipy>=0.19",
  "mne>1.6.0",
  "tensorpac>0.5.6",
]
requires-python = ">=3.8"
authors = [
  {name = "Nathan Cross", email = "nathan.cross@sydney.edu.au"},
]
maintainers = [
  {name = "Nathan Cross", email = "nathan.cross@sydney.edu.au"}
]
description = "A package pipeline for Sleep Events Analysis of EEG data."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["sleep", "eeg", "detection", "signal processing"]
classifiers = [
  "Development Status :: 0.1 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
plot = ["PyQt5",
       "matplotlib"]


[project.urls]
Homepage = "https://seapipe.readthedocs.io/"
Documentation = "https://seapipe.readthedocs.io/"
Repository = "https://github.com/nathanecross/seapipe"
"Bug Tracker" = "https://github.com/nathanecross/seapipe/issues"
Changelog = "https://github.com/nathanecross/seapipe/blob/master/CHANGELOG.md"

[project.scripts]
seapipe = "dataset:pipeline"

